# apple-music-wa

./: .gitignore  Cargo.toml  README.md  flake.nix  index.html  shell.nix  styles.css
.cargo/: config.toml
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
