[package]
name = "apple-music-wa-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.10", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
tauri = "2.8.5"

[workspace]
members = ["src-tauri"]
